cmd/stock-manager/k8s/01-stock-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-manager
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stock-manager
  template:
    metadata:
      labels:
        app: stock-manager
    spec:
      containers:
      - name: stock-manager
        image: uhub.service.ucloud.cn/entropypool/stock-manager:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: stock-manager
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 50270
    targetPort: 50270
  - name: grpc
    port: 50271
    targetPort: 50271
  - name: prometheus
    port: 50272
    targetPort: 50272
  selector:
    app: stock-manager
